@@ -7,8 +7,10 @@
     <groupId>uk.yermak</groupId>
     <artifactId>audiobookconverter</artifactId>
 
-    <version>5.6.1</version>
-<!--    <version>#{APP_VERSION}#</version>-->
+<!--
+    <version>5.5.10</version>
+-->
+    <version>#{APP_VERSION}#</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -16,10 +18,8 @@
         <compiler.generate.no.warnings>off</compiler.generate.no.warnings>
         <compiler.max.memory>700m</compiler.max.memory>
         <compiler.debug>on</compiler.debug>
-<!--
-        <compiler.args.main>&#45;&#45;enable-preview</compiler.args.main>
--->
-        <javafx.version>17.0.0.1</javafx.version>
+        <compiler.args.main>--enable-preview</compiler.args.main>
+        <javafx.version>17.0.1</javafx.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -185,11 +185,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
-<!--
                 <configuration>
-                    <argLine>&#45;&#45;enable-preview</argLine>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
--->
             </plugin>
 
             <plugin>
